Fixed social-links z-index

--- a/css/main.scss
+++ b/css/main.scss
@@ -131,6 +131,7 @@ section#home{
     }
     /* social links */
     .social-links{
+        z-index: 30;
         position: absolute;
         top: 50%;
         right: 0%;
